--- a/app/src/main/res/layout/item_address.xml
+++ b/app/src/main/res/layout/item_address.xml
@@ -14,7 +14,9 @@
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="10dp"
         android:text="@string/demo_address"
-        android:textSize="18sp"
+        android:textSize="14sp"
+        android:fontFamily="@font/muli_regular"
+        android:textColor="@color/grey"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
