--- a/app/src/main/res/layout/activity_addresses.xml
+++ b/app/src/main/res/layout/activity_addresses.xml
@@ -24,8 +24,8 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/address_foa_centre"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
         android:clickable="true"
         android:visibility="invisible"
         app:backgroundTint="@color/button_next"
@@ -37,8 +37,8 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/address_foa_bottom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
         android:clickable="true"
         app:backgroundTint="@color/button_next"
         app:layout_constraintBottom_toBottomOf="parent"
