--- a/app/src/main/res/layout/activity_add_addresses.xml
+++ b/app/src/main/res/layout/activity_add_addresses.xml
@@ -22,6 +22,7 @@
                 android:layout_marginLeft="40dp"
                 android:layout_marginRight="40dp"
                 android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
                 app:errorEnabled="true">
 
                 <EditText
@@ -41,8 +42,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
                 android:layout_marginRight="40dp"
+                android:layout_marginBottom="10dp"
                 app:errorEnabled="true">
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/add1"
@@ -60,7 +62,7 @@
                 android:layout_marginRight="40dp"
                 app:errorEnabled="true">
 
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/add2"
@@ -77,7 +79,7 @@
                 android:layout_marginLeft="40dp"
                 android:layout_marginRight="40dp"
                 app:errorEnabled="true">
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/landmark"
@@ -93,8 +95,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
                 android:layout_marginRight="40dp"
+                android:layout_marginBottom="10dp"
                 app:errorEnabled="true">
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/city"
@@ -110,8 +113,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
                 android:layout_marginRight="40dp"
+                android:layout_marginBottom="10dp"
                 app:errorEnabled="true">
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/state"
@@ -127,10 +131,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
                 android:layout_marginRight="40dp"
+                android:layout_marginBottom="10dp"
                 app:errorEnabled="true"
                 app:counterEnabled="true"
                 app:counterMaxLength="6">
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/pincode"
@@ -151,7 +156,7 @@
                 android:layout_marginLeft="40dp"
                 android:layout_marginRight="40dp"
                 android:layout_marginTop="30dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="20dp"
                 android:fontFamily="@font/muli_regular"
                 android:textColor="@color/grey"/>
 
@@ -164,7 +169,7 @@
                 android:layout_gravity="right"
                 android:layout_marginRight="40dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="30dp"
                 android:fontFamily="@font/muli_regular"
                 android:textColor="@color/grey"/>
         </LinearLayout>
