--- a/app/src/main/res/layout/activity_addresses.xml
+++ b/app/src/main/res/layout/activity_addresses.xml
@@ -33,7 +33,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_add_white_24dp" />
+        app:srcCompat="@drawable/ic_add_white_24dp"
+        android:onClick="onFabClick"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/address_foa_bottom"
@@ -49,6 +50,7 @@
         app:layout_constraintVertical_bias="0.954"
         app:srcCompat="@drawable/ic_add_white_24dp"
         android:visibility="invisible"
+        android:onClick="onFabClick"
         />
 
     <TextView
