--- a/app/src/main/res/menu/setting_menu.xml
+++ b/app/src/main/res/menu/setting_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/setting_update"
-        android:title="Update"/>
+        android:title="@string/update"/>
     <item android:id="@+id/setting_delete"
-        android:title="Delete"/>
+        android:title="@string/delete"/>
 </menu>
