--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#4A90E2</color>
     <color name="button_next">#FF9800</color>
     <color name="grey">#9B9B9B</color>
+    <color name="white">#ffffff</color>
 </resources>
