--- a/app/src/main/res/layout/activity_addresses.xml
+++ b/app/src/main/res/layout/activity_addresses.xml
@@ -5,7 +5,7 @@
     android:id="@+id/addresses_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Addresses"
+    tools:context=".AddressesActivity"
     android:background="@color/white">
 
     <androidx.recyclerview.widget.RecyclerView
